--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       # - chmod +x ./gradlew
       # - ./gradlew assembleDebug
       # Sync the templates
-      - aws s3 sync . s3://${S3_BUCKET}
+      # - aws s3 sync . s3://${S3_BUCKET}
 # artifacts:
 #   files:
 #      - './android/app/build/outputs/**/*.apk'
